--- a/config/services.yaml
+++ b/config/services.yaml
@@ -22,3 +22,6 @@ services:
             - '../src/App/Kernel.php'
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Application\CommandHandler\CreateSurveyHandler:
+        tags: ['messenger.message_handler']
