--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -5,7 +5,7 @@ framework:
         # Enables validator auto-mapping support.
         # For instance, basic validation constraints will be inferred from Doctrine's metadata.
         #auto_mapping:
-        #    App\Infrastructure\Persistence\Doctrine\Entity\: []
+        #    App\Domain\Model\Survey\: []
 
 when@test:
     framework:
